# work4

./: CMakeLists.txt  main.cpp
headers/: ClassP.h
realisation/: ClassP.cpp
